# AERA

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.streamlit/: config.toml
aera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cloud/: README.md  requirements.txt
cloud/app/: __init__.py  main.py
configs/: app.yaml  models.yaml
edge/: main.py  requirements.txt
edge/configs/: camera.yaml
edge/plugins/: registry.py
edge/reports/: backend_validation_report.md  health_report.json  performance_report.json
edge/scripts/: run_validation.py
edge/src/alert/: __init__.py  alert.py  exceptions.py  history.py  manager.py  notifier.py
edge/tests/: test_alert.py  test_camera.py  test_camera_system.py  test_dashboard.py  test_detection.py  test_event.py  test_evidence.py  test_integration.py  test_notifications.py  test_yolo_detector.py
src/: __init__.py
src/alert/: channels.py
src/camera/: camera.py  exceptions.py  health.py  manager.py  stream.py
src/dashboard/: app.py
src/decision/: engine.py
src/detection/: detector.py  exceptions.py  registry.py
src/event/: __init__.py  types.py
src/incident/: manager.py
src/integration/: __init__.py  coordinator.py  pipeline.py
src/notifications/: __init__.py  client.py  manager.py  models.py  telegram.py
src/report/: __init__.py  formatter.py  manager.py  report.py
tests/: test_decision.py  test_gateway_integration.py  test_notifications.py  test_report.py
tests/validation/: test_logging_validation.py  test_performance.py  test_threading.py
(+317 files in other folders)
