[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aera"
version = "0.1.0"
description = "AERA emergency response analytics scaffold"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
